--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Hello worl</h1>
+    <h1>Hello world</h1>
     <p> Estoy haciendo pruebas.</p>
   </body>
 </html>
