--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1>Hello world</h1>
-    <p> Estoy haciendo pruebas.</p>
+    <p> Estoy haciendo pruebas. Y aún no entiendo como funciona esto.</p>
   </body>
 </html>
